// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent can display a custom message when filtering results in no results 1`] = `

<div id="app">
  <div class="table-component"
       extra-settings="[object Object]"
  >
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <a class="table-component__filter__clear">
        ×
      </a>
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
    <div class="table-component__message">
    </div>
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent can display a custom placeholder in the filter field 1`] = `

<div id="app">
  <div class="table-component"
       extra-settings="[object Object]"
  >
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <a class="table-component__filter__clear">
        ×
      </a>
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
    <div class="table-component__message">
    </div>
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent can mount 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the caption 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <!---->
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the filter 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent will use the property name as a column heading if label is not set 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
              firstName
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;

exports[`TableComponent won't use the property name as a column heading if label is an empty string 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th--sort"
            >
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <div>
      </div>
    </div>
  </div>
</div>

`;
